--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 TELEGRAM_TOKEN=123456789:AAAAAAAAAAAAAAAAAAAAAAAAAAAAA-AAAAA
 UPDATE_INTERVAL=1h
+FEEDS=https://example.com/rss1.xml,https://example.com/rss2.xml
