--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,27 +1,35 @@
+name: Push commits
+
 # Run on push, skip release tags
 on:
   push:
     branches: [master]
     tags-ignore: ['*']
 
-name: Push commits
-
 jobs:
   test:
     strategy:
       matrix:
-        go-version: [1.16.x]
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Install Go
         uses: actions/setup-go@v1
         with:
-          go-version: ${{ matrix.go-version }}
+          go-version: 1.16.x
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test
-        run: go test ./...
+        run: go test -count=100 -race ./...
+  cover:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.16.x
+      - name: Checkout code
+        uses: actions/checkout@v2
       - name: Generate coverage report
         run: ./.github/workflows/codecov.sh
       - name: Upload coverage to Codecov
