--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
       - name: Test
-        run: go test -count=100 -race ./...
+        run: go test ./...
   cover:
     runs-on: ubuntu-latest
     steps:
