--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,6 +1,5 @@
 name: Build
 
-# Run on push, skip release tags
 on:
   push:
     branches: [master]
@@ -12,54 +11,77 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
+
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Install Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.16.x
-      - name: Checkout code
-        uses: actions/checkout@v2
+          go-version: 1.18.x
+
       - name: Test
         run: go test ./...
+
   cover:
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
       - name: Install Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v3
         with:
-          go-version: 1.16.x
-      - name: Checkout code
-        uses: actions/checkout@v2
+          go-version: 1.18.x
+
       - name: Generate coverage report
         run: ./.github/workflows/codecov.sh
+
       - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v2
+
   lint:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Run linter
-        uses: golangci/golangci-lint-action@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Go
+        uses: actions/setup-go@v3
         with:
-          version: v1.29
-  docker:
+          go-version: 1.18.x
+
+      - name: Run linter
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.46
+
+  build:
+    needs: [test, cover, lint]
     runs-on: ubuntu-latest
+
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: tetafro
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           push: true
           tags: tetafro/feed-bot:latest
+
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
