--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -62,26 +62,25 @@ jobs:
   build:
     needs: [test, cover, lint]
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    timeout-minutes: 10
 
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - name: Log in to the container registry
+        uses: docker/login-action@v2
         with:
+          registry: ghcr.io
           username: tetafro
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
+      - name: Build and push docker image
+        uses: docker/build-push-action@v3
         with:
+          context: .
           push: true
-          tags: tetafro/feed-bot:latest
-
-      - name: Image digest
-        run: echo ${{ steps.docker_build.outputs.digest }}
+          tags: ghcr.io/tetafro/feed-bot:latest
