Fix deploy process.

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Build and deploy
 
 on:
   push:
@@ -73,10 +73,10 @@ jobs:
         run: sudo apt install -y ansible ansible-lint yamllint
 
       - name: Run yamllint
-        run: yamllint --format colored --strict ./deploy/*.yml
+        run: yamllint --format colored --strict ./playbook.yml
 
       - name: Run ansible-lint
-        run: ansible-lint ./deploy/*.yml
+        run: ansible-lint ./playbook.yml
 
   build:
     needs: [test, cover, lint-go, lint-ansible]
@@ -132,4 +132,4 @@ jobs:
           --private-key ~/.ssh/id_ed25519
           --inventory '${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }},'
           --user ${{ secrets.SSH_USER }}
-          deploy/playbook.yml
+          ./playbook.yml
