Update linter settings.

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -7,31 +7,45 @@ linters:
   enable:
     - asciicheck
     - bodyclose
+    - cyclop
     - deadcode
     - depguard
     - dogsled
+    - durationcheck
     - errcheck
+    - errname
+    - errorlint
+    - exhaustive
     - exportloopref
+    - exportloopref
+    - gochecknoglobals
     - gochecknoinits
+    - gocognit
     - goconst
     - gocritic
     - gocyclo
     - godot
+    - goerr113
     - gofmt
+    - gofumpt
     - goimports
-    - golint
     - goprintffuncname
     - gosec
     - gosimple
     - govet
+    - importas
     - ineffassign
     - lll
     - misspell
     - nakedret
     - nestif
+    - noctx
     - nolintlint
     - prealloc
+    - revive
     - rowserrcheck
+    - sqlclosecheck
+    - sqlclosecheck
     - staticcheck
     - structcheck
     - stylecheck
@@ -40,7 +54,12 @@ linters:
     - unparam
     - unused
     - varcheck
+    - wastedassign
     - whitespace
+    - wrapcheck
 
 issues:
   exclude-use-default: false
+  exclude:
+    - "G404: Use of weak random number generator"
+    - "do not define dynamic errors, use wrapped static errors instead"
