Fix config paths.

--- a/playbook.yml
+++ b/playbook.yml
@@ -18,7 +18,7 @@
 
     - name: Ensure configs exist
       file:
-        path: "{{ item }}"
+        path: "{{ dir }}/{{ item }}"
         state: file
         mode: 0666
       with_items:
