Fix image pulling in ansible playbook.

--- a/playbook.yml
+++ b/playbook.yml
@@ -29,6 +29,7 @@
       docker_image:
         name: "{{ image }}:{{ tag }}"
         source: pull
+        force_source: true
 
     - name: Remove current container
       docker_container:
