--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -46,13 +46,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Install Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.21.x
 
       - name: Run linter
         uses: golangci/golangci-lint-action@v3
