--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,8 @@
 run:
   concurrency: 2
   deadline: 5m
+  skip-files:
+    - "_mock\\.go$"
 
 linters:
   disable-all: true
@@ -8,7 +10,6 @@ linters:
     - asciicheck
     - bodyclose
     - cyclop
-    - deadcode
     - dogsled
     - durationcheck
     - errcheck
@@ -17,7 +18,6 @@ linters:
     - exhaustive
     - exportloopref
     - exportloopref
-    - gochecknoglobals
     - gochecknoinits
     - gocognit
     - goconst
@@ -46,13 +46,11 @@ linters:
     - sqlclosecheck
     - sqlclosecheck
     - staticcheck
-    - structcheck
     - stylecheck
     - typecheck
     - unconvert
     - unparam
     - unused
-    - varcheck
     - wastedassign
     - whitespace
     - wrapcheck
@@ -62,3 +60,15 @@ issues:
   exclude:
     - "G404: Use of weak random number generator"
     - "do not define dynamic errors, use wrapped static errors instead"
+    - "Error return value of `.*.Body.Close` is not checked"
+  exclude-rules:
+    - path: _test\.go
+      linters:
+        - goconst
+        - gocyclo
+        - errcheck
+        - dupl
+        - gosec
+        - noctx
+    - path: main.go
+      text: "`defer cancel\\(\\)` will not run"
