--- a/playbook.yml
+++ b/playbook.yml
@@ -26,7 +26,7 @@
     - name: Ensure data file exists
       file:
         path: "{{ dir }}/data.yaml"
-        state: file
+        state: touch
         mode: "0666"
 
     - name: Pull latest image
