--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,7 +11,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -26,10 +25,9 @@ jobs:
 
   cover:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Install Go
         uses: actions/setup-go@v3
@@ -44,10 +42,14 @@ jobs:
 
   lint-go:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Install Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.25.x
 
       - name: Run linter
         uses: golangci/golangci-lint-action@v6
@@ -59,7 +61,6 @@ jobs:
     permissions:
       contents: read
     timeout-minutes: 10
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
