--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -16,9 +16,9 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v6
         with:
-          go-version: 1.25.x
+          go-version: "1.25"
 
       - name: Test
         run: go test ./...
@@ -30,9 +30,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v6
         with:
-          go-version: 1.25.x
+          go-version: "1.25"
 
       - name: Generate coverage report
         run: ./.github/workflows/codecov.sh
@@ -47,9 +47,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v6
         with:
-          go-version: 1.25.x
+          go-version: "1.25"
 
       - name: Run linter
         uses: golangci/golangci-lint-action@v6
