--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v6
         with:
-          go-version: "1.25"
+          go-version: "1.24"
 
       - name: Test
         run: go test ./...
@@ -32,7 +32,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v6
         with:
-          go-version: "1.25"
+          go-version: "1.24"
 
       - name: Generate coverage report
         run: ./.github/workflows/codecov.sh
@@ -49,15 +49,15 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@v6
         with:
-          go-version: "1.25"
+          go-version: "1.24"
 
       - name: Run linter
         uses: golangci/golangci-lint-action@v6
         with:
-          version: v1.62
+          version: v1.64
 
   lint-ansible:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     permissions:
       contents: read
     timeout-minutes: 10
@@ -66,7 +66,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install linters
-        run: sudo apt install -qq -y ansible ansible-lint yamllint
+        run: sudo apt install -qq -y ansible-lint yamllint
 
       - name: Run yamllint
         run: yamllint --format colored --strict ./playbook.yml
