--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -128,7 +128,7 @@ jobs:
       - name: Deploy new image
         run: >
           ansible-playbook
-          --become \
+          --become
           --private-key ~/.ssh/id_ed25519
           --inventory '${{ secrets.SSH_HOST }}:${{ secrets.SSH_PORT }},'
           --user ${{ secrets.SSH_USER }}
